# pooh-skills

./: .gitignore  README.md  repo-health-control-plane-hard-cut-checklist.md
.agents/plugins/: marketplace.json
.githooks/: _main_only_guard.sh  pre-commit  pre-push  pre-rebase
.plans/: slim-fix-supplement.md
plugins/pooh-skills/internal-skills/.pooh-runtime/python-toolchain/: pyproject.toml
scripts/: check_repo_plugin.py  check_skill_fleet.py  install.sh  install_home_local_plugin.sh  manage_home_local_plugin.py  run_child_wrapper_smoke_matrix.py  run_control_plane_renderer_regressions.py  run_controlled_cleanup_fixture_regressions.py  run_home_local_plugin_installer_regressions.py  run_legacy_surface_fixture_regressions.py  run_module_shape_fixture_regressions.py  run_new_audit_fixture_regressions.py  run_repo_health_fixture_regressions.py  run_secrets_and_hardcode_fixture_regressions.py  run_shared_runtime_regressions.py  run_skill_fleet_harness.sh  run_test_quality_fixture_regressions.py  sync_plugin_bundle.py  sync_shared_skill_refs.py  uninstall_home_local_plugin.sh
shared/: output-contract.md  reporting-style.md  runtime-artifact-contract.md
skills/controlled-cleanup-hardgate/: SKILL.md
skills/dep-audit/: SKILL.md
skills/dependency-audit/: SKILL.md
skills/distributed-side-effect-hardgate/: SKILL.md
skills/error-governance-hardgate/: SKILL.md
skills/llm-api-freshness-guard/: SKILL.md
skills/module-shape-hardgate/: SKILL.md
skills/overdefensive-silent-failure-hardgate/: SKILL.md
skills/pydantic-ai-temporal-hardgate/: SKILL.md
(+343 files in other folders)
