[project]
name = "pooh-runtime-python-toolchain"
version = "1.0.0"
description = "Shared locked Python CLI toolchain for pooh-skills"
requires-python = ">=3.11"

[dependency-groups]
audit = [
  "bandit==1.8.6",
  "check-jsonschema==0.34.1",
  "ruff==0.15.8",
  "semgrep==1.156.0",
  "tach==0.34.0",
]

[tool.uv]
package = false
